--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/GilbertoSG1/pkgrcpp
 BugReports: https://github.com/GilbertoSG1/pkgrcpp/issues
+LinkingTo: 
+    Rcpp
+Imports: 
+    Rcpp
